# miele-wordstat-parser

./: .env.example  .gitignore  README.md  docker-compose.metabase.yml  pyproject.toml  requirements.txt
configs/: default.yaml
dashboards/: streamlit_app.py
evidence/: README.md
evidence/sources/bi/: connection.yaml
evidence/src/pages/: index.md
scripts/: load_metabase_postgres.sh  run_batch.sh  setup_debian.sh  sync_evidence_sources.sh
seeds/: miele_queries.csv
sql/: create_tables.sql  views.sql
src/miele_wordstat/: __init__.py  classification.py  cli.py  collector.py  config.py  db.py  domains.py  export.py  parser.py  planner.py  seed_generator.py  yandex_client.py
