[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "miele-wordstat-parser"
version = "0.1.0"
description = "Local Yandex Wordstat collection and BI pipeline for Miele queries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb",
    "loguru",
    "pandas",
    "plotly",
    "pyarrow",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "requests",
    "streamlit",
    "typer",
]

[project.scripts]
miele-wordstat = "miele_wordstat.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
